--- a/apps/react/package.json
+++ b/apps/react/package.json
@@ -44,6 +44,7 @@
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@types/canvas-confetti": "^1.9.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "axios": "^1.7.7",
@@ -54,6 +55,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.5.2",
     "input-otp": "^1.4.2",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.475.0",
     "motion": "^12.4.2",
     "next-themes": "^0.4.4",
@@ -61,15 +63,17 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
+    "react-redux": "^9.2.0",
     "react-resizable-panels": "^2.1.7",
-    "react-router-dom": "^6.11.2",
+    "react-router-dom": "^6.29.0",
     "recharts": "^2.15.1",
     "sonner": "^1.7.4",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.0.2",
     "vaul": "^1.1.2",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/node": "^22.13.1",
