--- a/apps/react/package.json
+++ b/apps/react/package.json
@@ -60,6 +60,7 @@
     "lucide-react": "^0.475.0",
     "motion": "^12.4.2",
     "next-themes": "^0.4.4",
+    "number-flow": "^0.5.5",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
@@ -77,6 +78,7 @@
     "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@number-flow/react": "^0.5.7",
     "@types/node": "^22.13.1",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
